--- a/front/css/theme.css
+++ b/front/css/theme.css
@@ -13328,7 +13328,7 @@ button:focus {
 
 .u-header__nav-link-toggle::after {
   display: inline-block;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
   font-size: 65%;
   font-weight: 900;
   content: "\f107";
@@ -13363,7 +13363,7 @@ button:focus {
 
 .u-header__sub-menu-nav-link-toggle::after {
   display: inline-block;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
   font-size: 80%;
   font-weight: 900;
   content: "\f105";
@@ -16184,7 +16184,7 @@ button:focus {
 
 .u-header-collapse__nav-pointer::after {
   display: inline-block;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
   font-size: 65%;
   font-weight: 900;
   content: "\f107";
@@ -19097,7 +19097,7 @@ label.btn {
 /* Toggle */
 .dropdown-toggle::after {
   display: inline-block;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
   font-size: 80%;
   font-weight: 900;
   content: "";
@@ -19449,7 +19449,7 @@ label.btn {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   content: "";
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
 }
 
 .bookmark-checkbox-input:checked ~ .bookmark-checkbox-label {
@@ -19485,7 +19485,7 @@ label.btn {
   top: 1rem;
   right: 1rem;
   display: none;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
   content: "\f058";
   font-weight: 900;
   color: #377dff;
@@ -22831,7 +22831,7 @@ label.btn {
 
 .u-datatable .u-datatable__trigger-icon::before {
   display: inline-block;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Pro";
   font-weight: 900;
   content: "\f107";
   margin-right: .75rem;
