update logo font awesome pro 5

--- a/front/css/theme.css
+++ b/front/css/theme.css
@@ -19100,7 +19100,7 @@ label.btn {
   font-family: "Font Awesome 5 Pro";
   font-size: 80%;
   font-weight: 900;
-  content: "";
+  content: "";
   margin-left: .5rem;
 }
 
