--- a/front/css/theme.css
+++ b/front/css/theme.css
@@ -6,7 +6,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --blue: #377dff;
+  --blue: #fd7e14;
   --indigo: #2d1582;
   --purple: #6f42c1;
   --pink: #e83e8c;
