small fix in colors

--- a/front/css/theme.machinex.css
+++ b/front/css/theme.machinex.css
@@ -21072,7 +21072,7 @@ label.btn {
 /* Flat */
 .u-slick__arrow--flat {
   color: #fff;
-  background-color: rgba(55, 125, 255, 0.8);
+  background-color: #fd7e14rgba(222, 68, 55, 0.1);
 }
 
 /* Flat White */
