range slider color changed to orange

--- a/front/css/theme.machinex.css
+++ b/front/css/theme.machinex.css
@@ -37,7 +37,37 @@
   --font-family-sans-serif: "Poppins", Helvetica, Arial, sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+/* CUSTOM BAR */
 
+.irs--flat .irs-bar {
+  top: 25px;
+  height: 12px;
+  background-color: #fd7e14 !important;
+}
+ /*bar name*/
+
+.irs--flat .irs-from,
+.irs--flat .irs-to,
+.irs--flat .irs-single {
+  color: white;
+  font-size: 10px;
+  line-height: 1.333;
+  text-shadow: none;
+  padding: 1px 5px;
+  background-color: #fd7e14 !important;
+  border-radius: 4px;
+}
+/* range bar*/
+.irs--flat .irs-handle > i:first-child {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 50%;
+  width: 2px;
+  height: 100%;
+  margin-left: -1px;
+  background-color: #fd7e14 !important;
+}
 *,
 *::before,
 *::after {
