new color orange

--- a/front/css/theme.machinex.css
+++ b/front/css/theme.machinex.css
@@ -21102,7 +21102,7 @@ label.btn {
 /* Flat */
 .u-slick__arrow--flat {
   color: #fff;
-  background-color: #fd7e14rgba(222, 68, 55, 0.1);
+  background-color: rgba(235, 132, 42, 0.65);
 }
 
 /* Flat White */
